additional squares background fixed also for dark mode

--- a/src/assets/squared.css
+++ b/src/assets/squared.css
@@ -80,12 +80,14 @@ h2.lowercase{
     }
 
     .square_item:nth-child(1),
-    .square_item:nth-child(4) {
+    .square_item:nth-child(4),
+    .square_item:nth-child(5) {
         background-color: #333;
     }
 
     .square_item:nth-child(2),
-    .square_item:nth-child(3) {
+    .square_item:nth-child(3),
+    .square_item:nth-child(6) {
         background-color: #444;
     }
 
